fix: alignment of accordion icons

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1783,6 +1783,7 @@ div.acc-button {
 
 div.acc-button img {
   margin-right: 10px;
+  margin-top: -6px;
 }
 
 .acc-button .heading-3 {
